fix invisible text in share modal
the text was white. the modal was white. i am smooth brained.

--- a/resources/style_dashboard.css
+++ b/resources/style_dashboard.css
@@ -158,6 +158,7 @@ nav:hover{
   /* Modal Content/Box */
   .modal-content {
     background-color: #fefefe;
+    color:black;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
